# play_cpp

./: .clang-format  .gitignore  CMakeLists.txt  README.md
cmake/: CompilerWarnings.cmake
src/: CMakeLists.txt  main.cpp
src/cpp/: CMakeLists.txt  benchmark.cpp  benchmark_vector_init.cpp  cartesian_product.cpp  clang_tidy_exclude.h  clang_tidy_exclude_middle.h  config.cpp  config_multi_inheritance.cpp  cpp.cpp  cpp20.cpp  macro_testing.cpp  struct_return_test.cpp  test_layout.cpp  tuple_return_test.cpp  valeri.cpp
src/cpp/undo_redo/: CMakeLists.txt  design.md  history_controller.hh  main.cpp
src/fill_voids/: CMakeLists.txt  main_fill_voids.cpp
src/gui_algorithm/: CMakeLists.txt  GuiAlgorithm.cpp
src/gui_qt/: CMakeLists.txt  GuiQt.cpp
src/play_cpp/: CMakeLists.txt  poly.cpp
src/polymorphism/: CMakeLists.txt  play_cpp.cpp
src/ranges/: CMakeLists.txt  ranges.cpp
src/xtensor/: CMakeLists.txt  tensor.cpp
ssh_transfer/files/: .zshrc  docker.config.fish  docker.zshrc  starship.toml
test/: CMakeLists.txt
